objects/Average_selling_price__c.object
<CustomObject>
    <fields>
        <fullName>Estimated_Amount2__c</fullName>
        <label>Average Service Contract Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installed_at_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Installed at Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Average selling prices</relationshipLabel>
        <relationshipName>Average_selling_prices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Installed Product Range</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Average selling prices</relationshipLabel>
        <relationshipName>Average_selling_prices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TechUniqueField__c</fullName>
        <description>Field used to avoid duplicate Average Selling Price records with the same {Country, Range}.</description>
        <externalId>true</externalId>
        <label>TechUniqueField</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Average selling price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Installed_at_Country__c</columns>
        <columns>Range2__c</columns>
        <columns>Estimated_Amount2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Average_Selling_Prices</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Installed_at_Country__c</columns>
        <columns>Range2__c</columns>
        <columns>Estimated_Amount2__c</columns>
        <filterScope>Everything</filterScope>
        <label>Average Selling Prices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_Average_Selling_Prices</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Range2__c</columns>
        <columns>TechUniqueField__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Installed_at_Country__c</field>
            <operation>contains</operation>
            <value>United States,USA,US</value>
        </filters>
        <label>US Average Selling Prices</label>
        <language>en_US</language>
        <sharedTo>
            <group>AR_Delegated_Admins</group>
            <group>AllSystemAdministrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ASP-{000000}</displayFormat>
        <label>Average selling price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Average selling prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>